# leptos-basic-template

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust-ci.yml
src/: app.rs  lib.rs  main.rs
tests/: app_tests.rs
tests/integration/: full_app_integration.rs
